--- a/src/webapp/WEB-INF/views/user-create.html
+++ b/src/webapp/WEB-INF/views/user-create.html
@@ -6,7 +6,7 @@
     <title>Create user</title>
 </head>
 <body>
-<form th:action="@{/users}" th:object="${user}" method="POST">
+<form th:action="@{/}" th:object="${user}" method="POST">
     <p><label for="name">name</label></p>
     <p><input type="text" id="name" name="name" required></p>
     <p><label for="age">age</label></p>
