--- a/src/webapp/WEB-INF/views/user-list.html
+++ b/src/webapp/WEB-INF/views/user-list.html
@@ -24,19 +24,18 @@
             <td th:text="${user.email}"></td>
             <td th:text="${user.age}"></td>
             <td>
-                <form th:action="@{/users/edit}">
+                <form th:action="@{/edit}">
                     <button type="submit" th:name="id" th:value="${user.id}">Edit</button>
                 </form>
             </td>
             <td>
-                <form method="post" th:action="@{/users/delete}">
+                <form method="post" th:action="@{/delete}">
                     <button type="submit" th:name="id" th:value="${user.id}">Delete</button>
                 </form>
             </td>
         </tr>
-        </tr>
         </tbody>
     </table>
-    <a href="/users/new">Create new user</a>
+    <a href="/new">Create new user</a>
 </body>
 </html>
